# urncjp

./: .gitignore  .prettierignore  LICENSE  README.md  RELEASE.md  eslint.config.mjs  install.json  package-lock.json  package.json  pyproject.toml
.github/workflows/: build.yml  publish.yml
jupyter-config/server-config/: urncjp.json
schema/: plugin.json
src/: handler.ts  index.ts
style/: base.css
urncjp/: __init__.py  handlers.py
